test/ill-formed/0081_pointer_in_struct_ret.c
struct s {
  int *p;
};
struct s f () {
  struct s ret;
  return ret;
}
